--- a/kategori.html
+++ b/kategori.html
@@ -73,8 +73,8 @@
       <h2>Kategori</h2>
 
       <div class="wrap-kategori row mt-5">
-        <div class="col-md-3">
-          <div class="card-k">
+        <!-- <div class="col-md-3">
+          <div class="card-p">
             <div class="img">
               <div class="shape-shadow"></div>
               <img src="img/download.jpg" alt="">
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="col-md-3">
-          <div class="card-k">
+          <div class="card-p">
             <div class="img">
               <div class="shape-shadow"></div>
               <img src="img/download.jpg" alt="">
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="col-md-3">
-          <div class="card-k">
+          <div class="card-p">
             <div class="img">
               <div class="shape-shadow"></div>
               <img src="img/download.jpg" alt="">
@@ -107,7 +107,7 @@
           </div>
         </div>
         <div class="col-md-3">
-          <div class="card-k">
+          <div class="card-p">
             <div class="img">
               <div class="shape-shadow"></div>
               <img src="img/download.jpg" alt="">
@@ -116,18 +116,38 @@
               <h5>Title Here</h5>
             </div>
           </div>
+        </div> -->
+
+        <div class="col-md-4">
+          <a href="">
+            <div class="card-k">
+              <div class="img">
+                <img src="./img/download.jpg" alt="">
+                <div class="shadow"></div>
+                <h3>Wisata Bahari</h3>
+              </div>
+            </div>
+          </a>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="card-k">
             <div class="img">
-              <div class="shape-shadow"></div>
-              <img src="img/download.jpg" alt="">
-            </div>
-            <div class="detail">
-              <h5>Title Here</h5>
+              <img src="./img/download.jpg" alt="">
+              <div class="shadow"></div>
+              <h3>Wisata Bahari</h3>
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="card-k">
+            <div class="img">
+              <img src="./img/download.jpg" alt="">
+              <div class="shadow"></div>
+              <h3>Wisata Bahari</h3>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
